--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-xcode_project: CJADataSource.xcworkspace # path to your xcodeproj folder
+xcode_workspace: CJADataSource.xcworkspace # path to your xcodeproj folder
 xcode_scheme: CJADataSourceTests
