--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: objective-c
 xcode_workspace: CJADataSource.xcworkspace # path to your xcodeproj folder
 xcode_scheme: CJADataSource
 xcode_sdk: iphonesimulator7.1
+after_success:
+  - coveralls
