--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+before_install:
+  - gem install cocoapods -v '0.34.1'
 language: objective-c
 xcode_workspace: CJADataSource.xcworkspace # path to your xcodeproj folder
 xcode_scheme: CJADataSource
